[package]
name = "first-cli-clap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.9"
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.19"
slug = "0.1.4"
time = { version = "0.3.11", features = ["local-offset", "formatting"] }
